included menu via php script

--- a/atm/links.html
+++ b/atm/links.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-
+<link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Andreas Transo :: Traditional Irish Scottish English American Music</title>
@@ -48,15 +48,9 @@ a:link {
   </object>
      <div class="nav-wrap">
 
-		<ul class="group" id="example-one">
-         <li><a href="index">Home</a></li> 
-            <li><a href="handfulofearth">Handful of Earth</a></li>            
-            <li><a href="bio">BiO</a></li>
-            <li><a href="music">Music</a></li>
-            <li><a href="events">Events</a></li>
-            <li><a href="contact">Contact</a></li>
-            <li><a href="links">Links</a></li>
-        </ul>
+     <?php
+      include 'menu.php';
+     ?>
         
     </div></td></tr>
   <tr>
